name:                arhelk
version:             0.1.0.0
synopsis:            AI core for minetest mod
description:         Please see README.md
homepage:            https://github.com/githubuser/arhelk#readme
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Game
build-type:          Simple
cabal-version:       >=1.25
extra-tmp-files:     arhelk.buildinfo

library
  hs-source-dirs:      src
  exposed-modules:     Arhelk
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

foreign-library mod
  type:                native-shared
  if os(Windows)
    options: standalone
    mod-def-file: mod.def

  hs-source-dirs:      src
  other-modules:       Arhelk
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010
  c-sources:           cbits/hsbracket.c

source-repository head
  type:     git
  location: https://github.com/githubuser/arhelk
