name:                arhelk
version:             0.1.0.0
synopsis:            AI core for minetest mod
description:         Please see README.md
homepage:            https://github.com/githubuser/arhelk#readme
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Game
build-type:          Simple
cabal-version:       >=1.25
extra-tmp-files:     arhelk.buildinfo

foreign-library mod
  type:                native-shared
  if os(Windows)
    options: standalone
    mod-def-file: mod.def

  hs-source-dirs:      src
  other-modules:
    Arhelk
    Cpp.Parent
    Cpp.Pointer
    Cpp.Threading
    Minetest.Cpp
    Minetest.Entrypoint
    Minetest.Environment
    Minetest.GUIEngine
    Minetest.Server
  build-depends:
      base                      >= 4.7    && < 5
    , containers                >= 0.5    && < 0.6
    , exceptions                >= 0.8    && < 0.9
    , inline-c
    , inline-c-cpp
    , stm                       >= 2.4    && < 2.5
    , template-haskell          >= 2.11   && < 2.12
    , transformers-base         >= 0.4.4  && < 0.5

  default-language:    Haskell2010
  c-sources:
    cbits/hsbracket.c
    src/Minetest/Environment.cpp
    src/Minetest/GUIEngine.cpp
    src/Minetest/Server.cpp
  extra-libraries:
    stdc++
  cc-options: -I../../../../../src -I/usr/include/irrlicht -I../../../../../src/jsoncpp

source-repository head
  type:     git
  location: https://github.com/githubuser/arhelk
